[package]
name = "dominator_helpers"
description = "helpers for Dominator"
version = "0.3.5"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/dominator-helpers"
homepage = "https://github.com/dakom/dominator-helpers"
repository = "https://github.com/dakom/dominator-helpers"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["javascript", "dom", "reactive", "signal", "frp"]
categories = ["gui", "web-programming", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discard = "^1.0"
futures-signals = "^0.3"
wasm-bindgen-futures = "^0.4"
futures = "^0.3"

[dev-dependencies]
dominator = "0.5.12"
futures-signals = "0.3.15"
wasm-bindgen = { version = "0.2.68", features = ["nightly"] }
js-sys = "0.3.45"
wasm-bindgen-test = "0.3.0"
serde = { version = "1.0.116", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
serde_json = "1.0.58"
web-sys = { version = "0.3.45", features = [
    'Url',
    'Request',
    'RequestInit',
    'Response',
    'RequestMode',
    'Headers',
    'Document', 
    'DocumentFragment',
    'HtmlTemplateElement',
    'Window',
    'Storage',
    'Location',
    'Element',
    'CssStyleDeclaration',
    'DomTokenList',
    'HtmlCollection',
    'HtmlInputElement',
    'HtmlImageElement',
    'HtmlSelectElement',
    'KeyboardEvent',
    'MouseEvent',
    'FileList',
    'File',
] }

[features]
ts_test = []
