[package]
name = "dominator_helpers"
description = "helpers for Dominator"
version = "0.4.3"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/dominator-helpers"
homepage = "https://github.com/dakom/dominator-helpers"
repository = "https://github.com/dakom/dominator-helpers"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["javascript", "dom", "reactive", "signal", "frp"]
categories = ["gui", "web-programming", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discard = "^1.0"
futures-signals = "^0.3"
wasm-bindgen-futures = "^0.4"
futures = "^0.3"
serde-wasm-bindgen = "^0.1"
serde = { version = "1.0.117"}
dominator = "0.5.14"
wasm-bindgen = "0.2.68"

[dependencies.web-sys]
version = "0.3.45"
features = [
    "MessageEvent",
]

[features]
ts_test = []
