[package]
name = "dominator_helpers"
description = "helpers for Dominator"
version = "0.6.4"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/dominator-helpers"
homepage = "https://github.com/dakom/dominator-helpers"
repository = "https://github.com/dakom/dominator-helpers"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["javascript", "dom", "reactive", "signal", "frp"]
categories = ["gui", "web-programming", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discard = "1.0.4"
futures-signals = "0.3.22"
wasm-bindgen-futures = "0.4.24"
futures = "0.3.15"
serde-wasm-bindgen = "0.3.0"
serde = "1.0.126"
dominator = "0.5.19"
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3.51"
features = [
    "MessageEvent",
]

[features]
ts_test = []
